# AiLearning

./: .gitignore  CMakeLists.txt  README.md  activer.cc  activer.h  analyse.cpp  basic.cc  basic.cpp  basic.h  benchmark_test.cc  benchmark_test.cpp  common.cc  common.cpp  common.h  constructor.cc  constructor.h  cuda_support.cu  gpu_cpu_compare.cc  layer.cpp  layer.h  matrix_utils.cc  matrix_utils.h  neuron.cc  neuron.cpp  neuron.h  number.cc  number.cpp  optimizer.cc  optimizer.cpp  optimizer.h  timer.h
docs/: init_weight.yaml  init_weight_empty.yaml  weight_21.yaml  weight_30.yaml  weight_99.yaml
scripts/: network.py  torch_lenet.py
